--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/JSMWebServer.js",
   "dependencies": {
     "cookies": "~0.5.1",
+    "ejs": "^2.3.4",
     "q": "^1.4.1",
     "socket.io": "^1.4.4"
   },
