--- a/lib/WebServerConfig.json
+++ b/lib/WebServerConfig.json
@@ -8,19 +8,19 @@
 	    "port": 8080,
 	    "cacheEntries": 512,
 	    "protocol": "http",
-	    "routes": [{match: "/jsm/client.js",
-			matchOn: "absolute",
-			resourceClass: "internal",
-			internalResourcePath: "/client/JSM.js",
-			action: "serve",
-			success: 200,
-			failure: 500},
-		       {match: ".*",
-			matchOn: "absolute",
-			resourceClass: "document",
-			action: "serve",
-			success: 200,
-			failure: 404}]
+	    "routes": [{"match": "/jsm/client.js",
+			"matchOn": "absolute",
+			"resourceClass": "internal",
+			"internalResourcePath": "/client/JSM.js",
+			"action": "serve",
+			"success": 200,
+			"failure": 500},
+		       {"match": ".*",
+			"matchOn": "absolute",
+			"resourceClass": "document",
+			"action": "serve",
+			"success": 200,
+			"failure": 404}]
 	}
     ]
 }
