--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ejs": "^2.3.4",
     "q": "^1.4.1",
     "soap": "^0.11.4",
-    "socket.io": "^1.4.4"
+    "socket.io": "^1.4.4",
+    "socketio-sticky-session": "^0.4.1"
   },
   "devDependencies": {},
   "scripts": {
