--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "name": "jsmumps",
-  "version": "0.0.1",
-  "description": "Asynchronous Application Server for GT.M (MUMPS)",
-  "main": "./lib/JSMWebServer.js",
-  "dependencies": {
-    "cookies": "~0.5.1",
-    "ejs": "^2.3.4",
-    "q": "^1.4.1",
-    "soap": "^0.11.4",
-    "socket.io": "^1.4.4",
-    "socketio-sticky-session": "^0.4.1"
-  },
-  "devDependencies": {},
+  "version": "0.1.0",
+  "description": "MUMPS Database Connector",
+  "main": "./lib/mumps",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./tests/test"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/CoherentLogic/JSMumps.git"
+    "url": "git+https://github.com/CoherentLogic/JSMumps.git"
   },
   "keywords": [
     "mumps",
-    "gtm",
-    "database",
-    "web"
+    "vista",
+    "objects",
+    "nodem"
   ],
-  "author": "John Willis <jpw@coherent-logic.com> (http://www.coherent-logic.com/cm/products/jsmumps)",
+  "author": "John P. Willis <jpw@coherent-logic.com>",
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/CoherentLogic/JSMumps/issues"
+  },
+  "homepage": "https://github.com/CoherentLogic/JSMumps#readme",
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "nodem": "^0.9.0",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0"
   }
 }
